intro section completed

--- a/task-9-Masterwork/index.html
+++ b/task-9-Masterwork/index.html
@@ -80,7 +80,7 @@
                 <a class="nav-link" href="#">Contact</a>
               </li>
               <li class="nav-item ms-2">
-                <a class="nav-link primary-btn" href="#">ScheduleA Demo</a>
+                <a class="nav-link primary-btn" href="#">Schedule A Demo</a>
               </li>
             </ul>
           </div>
@@ -125,16 +125,15 @@
         </p>
       </div>
       <div class="testimonial__content container-fluid px-5 mt-4">
-        <div class="row gx-5">
+        <div class="row">
           <div class="testimonial__card col-lg text-center col-sm-12">
             <div class="testimonial__image">
               <img src="./images/s1.png" alt="testimonial 1" />
             </div>
             <h3>Interactive</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur 
-              adipisicing elit. Laudantium tempora 
-              rerum perspiciatis?
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Laudantium tempora rerum perspiciatis?
             </p>
           </div>
           <div class="testimonial__card col-lg text-center col-sm-12">
@@ -143,9 +142,8 @@
             </div>
             <h3>Business</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur 
-              adipisicing elit. Laudantium tempora 
-              rerum perspiciatis?
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Laudantium tempora rerum perspiciatis?
             </p>
           </div>
           <div class="testimonial__card col-lg text-center col-sm-12">
@@ -154,14 +152,89 @@
             </div>
             <h3>Inspiration</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur 
-              adipisicing elit. Laudantium tempora 
-              rerum perspiciatis?
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Laudantium tempora rerum perspiciatis?
             </p>
           </div>
         </div>
       </div>
     </section>
+
+    <section class="intro container-fluid px-5 py-4">
+      <div class="row d-flex justify-content-center align-items-center">
+        <div class="col-lg-6 text-start">
+          <h4 class="sub-title">About Our Company</h4>
+          <h3>
+            The Best Choice For Your <br />
+            Successful Business!
+          </h3>
+          <p class="mb-4">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et est
+            repellendus illum harum quam nihil totam reprehenderit! Ut sed
+            eveniet quos! Asperiores officia, repudiandae similique reiciendis,
+            ab est magnam esse nesciunt ea fuga facere voluptatem.
+          </p>
+          <a class="secondary-btn" href="#">Read More</a>
+        </div>
+        <div class="col-lg-6">
+          <img
+            class="img-fluid intro__image"
+            src="./images/about.jpg"
+            alt="intro image 1"
+          />
+        </div>
+      </div>
+
+      <div class="row mt-3">
+        <div class="intro__card col-lg">
+          <h6>Happy Customers</h6>
+          <h5 class="counter">10458</h5>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere
+            atque sed.
+          </p>
+        </div>
+        <div class="intro__card col-lg">
+          <h6>Winning Awards</h6>
+          <h5 class="counter">890</h5>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere
+            atque sed.
+          </p>
+        </div>
+        <div class="intro__card col-lg">
+          <h6>Completed Projects</h6>
+          <h5 class="counter">5345</h5>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere
+            atque sed.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- JS -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+      integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
+      type="text/javascript"
+      src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"
+    ></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+
+    <script src="./libs/countup/jquery.countup.min.js"></script>
+
+    <script>
+      $(".counter").countUp({
+        time: 2000,
+        delay: 10,
+      });
+    </script>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
