stats section completed

--- a/task-9-Masterwork/index.html
+++ b/task-9-Masterwork/index.html
@@ -109,9 +109,9 @@
       </div>
     </section>
 
-    <!-- TESTIMONIAL -->
-    <section class="testimonial container-fluid py-4">
-      <div class="testimonial__text col-lg-8 mx-auto text-center">
+    <!-- business -->
+    <section class="business container-fluid py-4">
+      <div class="business__text col-lg-8 mx-auto text-center">
         <h4 class="sub-title">Why choose us</h4>
         <h3>
           Tools for business startup to <br />
@@ -124,11 +124,11 @@
           quam.
         </p>
       </div>
-      <div class="testimonial__content container-fluid px-5 mt-4">
+      <div class="business__content container-fluid px-5 mt-4">
         <div class="row">
-          <div class="testimonial__card col-lg text-center col-sm-12">
-            <div class="testimonial__image">
-              <img src="./images/s1.png" alt="testimonial 1" />
+          <div class="business__card col-lg text-center col-sm-12">
+            <div class="business__image">
+              <img src="./images/s1.png" alt="business 1" />
             </div>
             <h3>Interactive</h3>
             <p>
@@ -136,9 +136,9 @@
               Laudantium tempora rerum perspiciatis?
             </p>
           </div>
-          <div class="testimonial__card col-lg text-center col-sm-12">
-            <div class="testimonial__image">
-              <img src="./images/s2.png" alt="testimonial 1" />
+          <div class="business__card col-lg text-center col-sm-12">
+            <div class="business__image">
+              <img src="./images/s2.png" alt="business 1" />
             </div>
             <h3>Business</h3>
             <p>
@@ -146,9 +146,9 @@
               Laudantium tempora rerum perspiciatis?
             </p>
           </div>
-          <div class="testimonial__card col-lg text-center col-sm-12">
-            <div class="testimonial__image">
-              <img src="./images/s3.png" alt="testimonial 1" />
+          <div class="business__card col-lg text-center col-sm-12">
+            <div class="business__image">
+              <img src="./images/s3.png" alt="business 1" />
             </div>
             <h3>Inspiration</h3>
             <p>
@@ -159,6 +159,8 @@
         </div>
       </div>
     </section>
+
+    <!-- INTRO -->
 
     <section class="intro container-fluid px-5 py-4">
       <div class="row d-flex justify-content-center align-items-center">
@@ -209,6 +211,24 @@
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere
             atque sed.
           </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- PERFORM -->
+    <section class="stats container-fluid px-5 ">
+      <div class="row">
+        <div class="col-lg-5">
+          <h4 class="mb-2">
+            We are true to ourselves, and commit to always perform at our best.
+          </h4>
+          <p class="mb-3">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Necessitatibus, doloribus atque. Corrupti exercitationem voluptatem
+            ipsum iste consequuntur et vitae voluptas temporibus? Maxime dolores
+            amet voluptatum illo consequatur placeat fugit ducimus.
+          </p>
+          <button class="secondary-white-btn">Read More</button>
         </div>
       </div>
     </section>
