--- a/task-9-Masterwork/index.html
+++ b/task-9-Masterwork/index.html
@@ -215,8 +215,8 @@
       </div>
     </section>
 
-    <!-- PERFORM -->
-    <section class="stats container-fluid px-5 ">
+    <!-- STATS -->
+    <section class="stats container-fluid px-5">
       <div class="row">
         <div class="col-lg-5">
           <h4 class="mb-2">
@@ -229,6 +229,93 @@
             amet voluptatum illo consequatur placeat fugit ducimus.
           </p>
           <button class="secondary-white-btn">Read More</button>
+        </div>
+      </div>
+    </section>
+
+    <!-- SOLUTION -->
+    <section class="solution container-fluid py-4">
+      <div class="col-lg-8 mx-auto text-center">
+        <h4 class="sub-title">We are here for you</h4>
+        <h3>Explore Solutions</h3>
+        <p>
+          Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
+          posuere cubilia Curae; Nulla mollis <br />
+          dapibus nunc, ut rhoncus turpis sodales quis. Integer sit amet mattis
+          quam.
+        </p>
+      </div>
+      <div class="container-fluid px-5">
+        <div class="row">
+          <div class="card col-lg solution__card">
+            <img
+              src="./images/b1.jpg"
+              class="card-img-top img-fluid"
+              alt="solution image"
+            />
+            <div class="card-body">
+              <label class="tag red-tag">Business</label>
+              <h4>
+                <a class="solution__heading" href="#"
+                  >Corporate,Business & Digital Agency</a
+                >
+              </h4>
+              <p class="card-text solution__text">
+                Lorem ipsum dolor sit amet nostrum ad minus libero fugiat
+                molestiae ullam ipsam quas unde earum...
+              </p>
+              <a href="#blog-single.html" class="solution__btn"
+                >Know More
+                <span class="fa fa-arrow-right" aria-hidden="true"></span>
+              </a>
+            </div>
+          </div>
+          <div class="card col-lg solution__card">
+            <img
+              src="./images/b7.jpg"
+              class="card-img-top img-fluid"
+              alt="solution image"
+            />
+            <div class="card-body">
+              <label class="tag green-tag">Design</label>
+              <h4>
+                <a class="solution__heading" href="#"
+                  >Corporate,Business & Digital Agency</a
+                >
+              </h4>
+              <p class="card-text solution__text">
+                Lorem ipsum dolor sit amet nostrum ad minus libero fugiat
+                molestiae ullam ipsam quas unde earum...
+              </p>
+              <a href="#blog-single.html" class="solution__btn"
+                >Know More
+                <span class="fa fa-arrow-right" aria-hidden="true"></span>
+              </a>
+            </div>
+          </div>
+          <div class="card col-lg solution__card">
+            <img
+              src="./images/b3.jpg"
+              class="card-img-top img-fluid"
+              alt="solution image"
+            />
+            <div class="card-body">
+              <label class="tag purple-tag">Industry</label>
+              <h4>
+                <a class="solution__heading" href="#"
+                  >Corporate,Business & Digital Agency</a
+                >
+              </h4>
+              <p class="card-text solution__text">
+                Lorem ipsum dolor sit amet nostrum ad minus libero fugiat
+                molestiae ullam ipsam quas unde earum...
+              </p>
+              <a href="#blog-single.html" class="solution__btn"
+                >Know More
+                <span class="fa fa-arrow-right" aria-hidden="true"></span>
+              </a>
+            </div>
+          </div>
         </div>
       </div>
     </section>
