--- a/task-9-Masterwork/index.html
+++ b/task-9-Masterwork/index.html
@@ -235,14 +235,13 @@
 
     <!-- SOLUTION -->
     <section class="solution container-fluid py-4">
-      <div class="col-lg-8 mx-auto text-center">
+      <div class="col-lg-8 mx-auto text-center mb-3">
         <h4 class="sub-title">We are here for you</h4>
         <h3>Explore Solutions</h3>
         <p>
           Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-          posuere cubilia Curae; Nulla mollis <br />
-          dapibus nunc, ut rhoncus turpis sodales quis. Integer sit amet mattis
-          quam.
+          posuere cubilia Curae; Nulla mollis dapibus nunc, ut rhoncus turpis
+          sodales quis. Integer sit amet mattis quam.
         </p>
       </div>
       <div class="container-fluid px-5">
@@ -320,6 +319,202 @@
       </div>
     </section>
 
+    <!-- FAQ -->
+    <section class="faq container-fluid py-4">
+      <div class="col-lg-8 mx-auto text-center mb-3">
+        <h4 class="sub-title">Questions and Answers</h4>
+        <h3>General FAQs</h3>
+        <p>
+          Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
+          posuere cubilia Curae; Nulla mollis dapibus nunc, ut rhoncus turpis
+          sodales quis. Integer sit amet mattis quam.
+        </p>
+      </div>
+      <div class="container-fluid px-5  px-sm-3">
+        <div class="row justify-content-center">
+          <div class="col-lg-5 col-sm-12 mb-3">
+            <img
+              class="img-curve shadow faq__image"
+              src="./images/women.jpg"
+              alt="faq image"
+            />
+          </div>
+          <div class="col-lg-7 col-sm-12 ps-2">
+            <div class="accordion accordion-flush" id="accordionFlushExample">
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingOne">
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#flush-collapseOne"
+                    aria-expanded="false"
+                    aria-controls="flush-collapseOne"
+                  >
+                    There are many passages but the majority
+                  </button>
+                </h2>
+                <div
+                  id="flush-collapseOne"
+                  class="accordion-collapse collapse"
+                  aria-labelledby="flush-headingOne"
+                  data-bs-parent="#accordionFlushExample"
+                >
+                  <div class="accordion-body">
+                    Voluptates amet earum velit nobis aliquam laboriosam nihil
+                    debitis facere voluptatibus consectetur quae quasi fuga, ad
+                    corrupti libero omnis sapiente non assumenda, incidunt
+                    officiis eaque iste minima autem.
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingTwo">
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#flush-collapseTwo"
+                    aria-expanded="false"
+                    aria-controls="flush-collapseTwo"
+                  >
+                    Sed ut perspiciatis unde omnis?
+                  </button>
+                </h2>
+                <div
+                  id="flush-collapseTwo"
+                  class="accordion-collapse collapse"
+                  aria-labelledby="flush-headingTwo"
+                  data-bs-parent="#accordionFlushExample"
+                >
+                  <div class="accordion-body">
+                    Sit amet consectetur adipisicing elit. Voluptates amet earum
+                    velit nobis aliquam laboriosam nihil debitis animi vitae eos
+                    nisi laudantium. Tempore reiciendis ipsam culpa, qui
+                    voluptates eveniet, incidunt officiis eaque iste minima
+                    autem.
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingThree">
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#flush-collapseThree"
+                    aria-expanded="false"
+                    aria-controls="flush-collapseThree"
+                  >
+                    At vero eos iusto odio ducimus qui?
+                  </button>
+                </h2>
+                <div
+                  id="flush-collapseThree"
+                  class="accordion-collapse collapse"
+                  aria-labelledby="flush-headingThree"
+                  data-bs-parent="#accordionFlushExample"
+                >
+                  <div class="accordion-body">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Voluptates amet earum velit nobis aliquam laboriosam nihil
+                    quasi fuga, ad corrupti libero omnis sapiente non assumenda
+                    excepturi aperiam animi vitae eos nisi laudantium. Tempore
+                    reiciendis ipsam culpa, qui voluptates eveniet, incidunt
+                    officiis eaque iste minima autem.
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingFour">
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#flush-collapseFour"
+                    aria-expanded="false"
+                    aria-controls="flush-collapseFour"
+                  >
+                    We denounce with righteous?
+                  </button>
+                </h2>
+                <div
+                  id="flush-collapseFour"
+                  class="accordion-collapse collapse"
+                  aria-labelledby="flush-headingFour"
+                  data-bs-parent="#accordionFlushExample"
+                >
+                  <div class="accordion-body">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Voluptates amet earum velit nobis aliquam laboriosam nihil
+                    debitis facere voluptatibus consectetur quae quasi fuga, ad
+                    corrupti libero omnis sapiente non assumenda excepturi
+                    aperiam iste minima autem.
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingFive">
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#flush-collapseFive"
+                    aria-expanded="false"
+                    aria-controls="flush-collapseFive"
+                  >
+                    Perspiciatis unde omnis?
+                  </button>
+                </h2>
+                <div
+                  id="flush-collapseFive"
+                  class="accordion-collapse collapse"
+                  aria-labelledby="flush-headingFive"
+                  data-bs-parent="#accordionFlushExample"
+                >
+                  <div class="accordion-body">
+                    Sit amet consectetur adipisicing elit. Voluptates amet earum
+                    velit nobis aliquam laboriosam nihil debitis animi vitae eos
+                    nisi laudantium. Tempore reiciendis ipsam culpa, qui
+                    voluptates eveniet, incidunt officiis eaque iste minima
+                    autem.
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingSix">
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#flush-collapseSix"
+                    aria-expanded="false"
+                    aria-controls="flush-collapseSix"
+                  >
+                    At vero eos iusto odio ducimus qui?
+                  </button>
+                </h2>
+                <div
+                  id="flush-collapseSix"
+                  class="accordion-collapse collapse"
+                  aria-labelledby="flush-headingSix"
+                  data-bs-parent="#accordionFlushExample"
+                >
+                  <div class="accordion-body">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Voluptates amet earum velit nobis aliquam laboriosam nihil
+                    quasi fuga, ad corrupti libero omnis sapiente non assumenda
+                    excepturi aperiam animi vitae eos nisi laudantium. Tempore
+                    reiciendis ipsam culpa, qui voluptates eveniet, incidunt
+                    officiis eaque iste minima autem.
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- JS -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
