--- a/task-9-Masterwork/index.html
+++ b/task-9-Masterwork/index.html
@@ -22,7 +22,7 @@
   <body>
     <header class="container-fluid p-0 header fixed-top">
       <nav class="navbar navbar-expand-lg navbar-light bg-white stroke">
-        <div class="container-fluid px-5">
+        <div class="container-fluid px-5 px-sm-3">
           <a class="navbar-brand" href="#">
             <i class="fa-solid fa-handshake"></i> Masterwork</a
           >
@@ -330,7 +330,7 @@
           sodales quis. Integer sit amet mattis quam.
         </p>
       </div>
-      <div class="container-fluid px-5  px-sm-3">
+      <div class="container-fluid px-5 px-sm-3">
         <div class="row justify-content-center">
           <div class="col-lg-5 col-sm-12 mb-3">
             <img
@@ -509,6 +509,145 @@
                     officiis eaque iste minima autem.
                   </div>
                 </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Feature -->
+    <section class="feature container-fluid py-4">
+      <div class="col-lg-8 mx-auto text-center mb-3">
+        <h4 class="sub-title">Featured Cases</h4>
+        <h3>Completed Projects</h3>
+        <p>
+          Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
+          posuere cubilia Curae; Nulla mollis dapibus nunc, ut rhoncus turpis
+          sodales quis. Integer sit amet mattis quam.
+        </p>
+      </div>
+      <div class="col-lg-8 mx-auto mx-sm-2">
+        <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+          <li class="nav-item" role="presentation">
+            <button
+              class="nav-link active"
+              id="pills-home-tab"
+              data-bs-toggle="pill"
+              data-bs-target="#pills-home"
+              type="button"
+              role="tab"
+              aria-controls="pills-home"
+              aria-selected="true"
+            >
+              Project One
+            </button>
+          </li>
+          <li class="nav-item" role="presentation">
+            <button
+              class="nav-link"
+              id="pills-profile-tab"
+              data-bs-toggle="pill"
+              data-bs-target="#pills-profile"
+              type="button"
+              role="tab"
+              aria-controls="pills-profile"
+              aria-selected="false"
+            >
+              Project Two
+            </button>
+          </li>
+          <li class="nav-item" role="presentation">
+            <button
+              class="nav-link"
+              id="pills-contact-tab"
+              data-bs-toggle="pill"
+              data-bs-target="#pills-contact"
+              type="button"
+              role="tab"
+              aria-controls="pills-contact"
+              aria-selected="false"
+            >
+              Project Three
+            </button>
+          </li>
+        </ul>
+        <div class="tab-content" id="pills-tabContent">
+          <div
+            class="tab-pane fade show active"
+            id="pills-home"
+            role="tabpanel"
+            aria-labelledby="pills-home-tab"
+          >
+            <div class="row">
+              <div class="col-lg-6 col-sm-12">
+                <h4>Why a visual identity system is more memorable</h4>
+                <p class="mb-3">
+                  Lorem ipsum dolor sit, adipisicing elit repudiandae
+                  perferendis dolores praesentium nulla quibusdam repellendus.
+                  consequatur minus aliquam corrupti blanditiis, necessitatibus
+                  consectetur modi ipsum natus accusantium sit pariatur.
+                </p>
+                <a class="primary-btn" href="#">Know More</a>
+              </div>
+              <div class="col-lg-6 col-sm-12">
+                <img
+                  class="img-curve shadow feature__image"
+                  src="./images/b4.jpg"
+                  alt="feature image 1"
+                />
+              </div>
+            </div>
+          </div>
+          <div
+            class="tab-pane fade"
+            id="pills-profile"
+            role="tabpanel"
+            aria-labelledby="pills-profile-tab"
+          >
+            <div class="row">
+              <div class="col-lg-6 col-sm-12 text-center">
+                <img
+                  class="img-curve shadow feature__image feature__image-small mx-auto"
+                  src="./images/b5.jpg"
+                  alt="feature image 1"
+                />
+              </div>
+              <div class="col-lg-6 col-sm-12">
+                <h4>Make website that looks Lorem, ipsum dolor.</h4>
+                <p class="mb-3">
+                  Lorem ipsum dolor sit, adipisicing elit repudiandae
+                  perferendis dolores praesentium nulla quibusdam repellendus.
+                  consequatur minus aliquam corrupti blanditiis, necessitatibus
+                  consectetur modi ipsum natus accusantium sit pariatur.
+                </p>
+                <a class="primary-btn" href="#">Know More</a>
+              </div>
+            </div>
+          </div>
+          <div
+            class="tab-pane fade"
+            id="pills-contact"
+            role="tabpanel"
+            aria-labelledby="pills-contact-tab"
+          >
+            <div class="row">
+              <div class="col-lg-6 col-sm-12">
+                <h4>Why a visual identity system is more memorable</h4>
+                <p class="mb-3">
+                  Lorem ipsum dolor sit, adipisicing elit repudiandae
+                  perferendis dolores praesentium nulla quibusdam repellendus.
+                  consequatur minus aliquam corrupti blanditiis, necessitatibus
+                  consectetur modi ipsum natus accusantium sit pariatur.
+                </p>
+                <a class="primary-btn" href="#">Know More</a>
+              </div>
+              <div class="col-lg-6 col-sm-12">
+                <img
+                  class="img-curve shadow feature__image"
+                  src="./images/b6.jpg"
+                  alt="feature image 3"
+                />
               </div>
             </div>
           </div>
