--- a/task-9-Masterwork/index.html
+++ b/task-9-Masterwork/index.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link rel="shortcut icon" href="./images/b9.jpg" />
-
     <link rel="stylesheet" href="./css/style.css" />
-
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -111,7 +109,7 @@
 
     <!-- business -->
     <section class="business container-fluid py-4">
-      <div class="business__text col-lg-8 mx-auto text-center">
+      <div class="business__text col-lg-6 mx-auto text-center">
         <h4 class="sub-title">Why choose us</h4>
         <h3>
           Tools for business startup to <br />
@@ -119,9 +117,8 @@
         </h3>
         <p>
           Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-          posuere cubilia Curae; Nulla mollis <br />
-          dapibus nunc, ut rhoncus turpis sodales quis. Integer sit amet mattis
-          quam.
+          posuere cubilia Curae; Nulla mollis dapibus nunc, ut rhoncus turpis
+          sodales quis. Integer sit amet mattis quam.
         </p>
       </div>
       <div class="business__content container-fluid px-5 mt-4">
@@ -235,7 +232,7 @@
 
     <!-- SOLUTION -->
     <section class="solution container-fluid py-4">
-      <div class="col-lg-8 mx-auto text-center mb-3">
+      <div class="col-lg-6 mx-auto text-center mb-3">
         <h4 class="sub-title">We are here for you</h4>
         <h3>Explore Solutions</h3>
         <p>
@@ -256,7 +253,7 @@
               <label class="tag red-tag">Business</label>
               <h4>
                 <a class="solution__heading" href="#"
-                  >Corporate,Business & Digital Agency</a
+                  >Corporate, Business & Digital Agency</a
                 >
               </h4>
               <p class="card-text solution__text">
@@ -279,7 +276,7 @@
               <label class="tag green-tag">Design</label>
               <h4>
                 <a class="solution__heading" href="#"
-                  >Corporate,Business & Digital Agency</a
+                  >Corporate, Business & Digital Agency</a
                 >
               </h4>
               <p class="card-text solution__text">
@@ -302,7 +299,7 @@
               <label class="tag purple-tag">Industry</label>
               <h4>
                 <a class="solution__heading" href="#"
-                  >Corporate,Business & Digital Agency</a
+                  >Corporate, Business & Digital Agency</a
                 >
               </h4>
               <p class="card-text solution__text">
@@ -321,7 +318,7 @@
 
     <!-- FAQ -->
     <section class="faq container-fluid py-4">
-      <div class="col-lg-8 mx-auto text-center mb-3">
+      <div class="col-lg-6 mx-auto text-center mb-3">
         <h4 class="sub-title">Questions and Answers</h4>
         <h3>General FAQs</h3>
         <p>
@@ -518,7 +515,7 @@
 
     <!-- Feature -->
     <section class="feature container-fluid py-4">
-      <div class="col-lg-8 mx-auto text-center mb-3">
+      <div class="col-lg-6 mx-auto text-center mb-3">
         <h4 class="sub-title">Featured Cases</h4>
         <h3>Completed Projects</h3>
         <p>
@@ -527,7 +524,7 @@
           sodales quis. Integer sit amet mattis quam.
         </p>
       </div>
-      <div class="col-lg-8 mx-auto mx-sm-2">
+      <div class="col-lg-8 mx-lg-auto mx-sm-2">
         <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
           <li class="nav-item" role="presentation">
             <button
@@ -654,6 +651,214 @@
         </div>
       </div>
     </section>
+
+    <!-- Testimonial -->
+    <section class="testimonial py-4">
+      <div class="col-lg-6 mx-auto text-center mb-3">
+        <h4 class="sub-title">Our Clients Testimonials</h4>
+        <h3>What People Say</h3>
+        <p>
+          Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
+          posuere cubilia Curae; Nulla mollis dapibus nunc, ut rhoncus turpis
+          sodales quis. Integer sit amet mattis quam.
+        </p>
+      </div>
+      <!-- data-bs-ride="carousel" -->
+
+      <div class="col-lg-12 mx-lg-auto mx-sm-2 px-4">
+        <div id="carouselExampleIndicators" class="carousel slide">
+          <div class="carousel-indicators">
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="0"
+              class="active"
+              aria-current="true"
+              aria-label="Slide 1"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="1"
+              aria-label="Slide 2"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="2"
+              aria-label="Slide 3"
+            ></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="row justify-content-evenly">
+                <div
+                  class="col-lg-5 mx-1 testimonial__card d-flex flex-lg-row flex-column justify-content-center align-items-center"
+                >
+                  <div class="img-circle">
+                    <img
+                      class="img-fluid"
+                      src="./images/team1.jpg"
+                      class="d-block w-100"
+                      alt="team 1"
+                    />
+                  </div>
+                  <div class="align-self-start">
+                    <i class="fa-solid fa-quote-left"></i>
+                  </div>
+                  <div class="carousel__message">
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Rerum veritatis sapiente corrupti optio nostrum debitis
+                      aliquam quos, distinctio numquam fuga voluptates vero ad
+                      eligendi? Odio molestias eligendi similique in dicta.
+                    </p>
+                    <h4 class="sub-title">Benjamin Lucas</h4>
+                    <p class="sub-text">Company name</p>
+                  </div>
+                </div>
+
+                <div
+                  class="col-lg-5 mx-1 testimonial__card d-flex flex-lg-row flex-column justify-content-center align-items-center"
+                >
+                  <div class="img-circle">
+                    <img
+                      class="img-fluid"
+                      src="./images/team1.jpg"
+                      class="d-block w-100"
+                      alt="team 1"
+                    />
+                  </div>
+                  <div class="align-self-start">
+                    <i class="fa-solid fa-quote-left"></i>
+                  </div>
+                  <div class="carousel__message">
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Rerum veritatis sapiente corrupti optio nostrum debitis
+                      aliquam quos, distinctio numquam fuga voluptates vero ad
+                      eligendi? Odio molestias eligendi similique in dicta.
+                    </p>
+                    <h4 class="sub-title">Benjamin Lucas</h4>
+                    <p class="sub-text">Company name</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="row justify-content-evenly">
+                <div
+                  class="col-lg-5 mx-1 testimonial__card d-flex flex-lg-row flex-column justify-content-center align-items-center"
+                >
+                  <div class="img-circle">
+                    <img
+                      class="img-fluid"
+                      src="./images/team1.jpg"
+                      class="d-block w-100"
+                      alt="team 1"
+                    />
+                  </div>
+                  <div class="align-self-start">
+                    <i class="fa-solid fa-quote-left"></i>
+                  </div>
+                  <div class="carousel__message">
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Rerum veritatis sapiente corrupti optio nostrum debitis
+                      aliquam quos, distinctio numquam fuga voluptates vero ad
+                      eligendi? Odio molestias eligendi similique in dicta.
+                    </p>
+                    <h4 class="sub-title">Benjamin Lucas</h4>
+                    <p class="sub-text">Company name</p>
+                  </div>
+                </div>
+
+                <div
+                  class="col-lg-5 mx-1 testimonial__card d-flex flex-lg-row flex-column justify-content-center align-items-center"
+                >
+                  <div class="img-circle">
+                    <img
+                      class="img-fluid"
+                      src="./images/team1.jpg"
+                      class="d-block w-100"
+                      alt="team 1"
+                    />
+                  </div>
+                  <div class="align-self-start">
+                    <i class="fa-solid fa-quote-left"></i>
+                  </div>
+                  <div class="carousel__message">
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Rerum veritatis sapiente corrupti optio nostrum debitis
+                      aliquam quos, distinctio numquam fuga voluptates vero ad
+                      eligendi? Odio molestias eligendi similique in dicta.
+                    </p>
+                    <h4 class="sub-title">Benjamin Lucas</h4>
+                    <p class="sub-text">Company name</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="row justify-content-evenly">
+                <div
+                  class="col-lg-5 mx-1 testimonial__card d-flex flex-lg-row flex-column justify-content-center align-items-center"
+                >
+                  <div class="img-circle">
+                    <img
+                      class="img-fluid"
+                      src="./images/team1.jpg"
+                      class="d-block w-100"
+                      alt="team 1"
+                    />
+                  </div>
+                  <div class="align-self-start">
+                    <i class="fa-solid fa-quote-left"></i>
+                  </div>
+                  <div class="carousel__message">
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Rerum veritatis sapiente corrupti optio nostrum debitis
+                      aliquam quos, distinctio numquam fuga voluptates vero ad
+                      eligendi? Odio molestias eligendi similique in dicta.
+                    </p>
+                    <h4 class="sub-title">Benjamin Lucas</h4>
+                    <p class="sub-text">Company name</p>
+                  </div>
+                </div>
+
+                <div
+                  class="col-lg-5 mx-1 testimonial__card d-flex flex-lg-row flex-column justify-content-center align-items-center"
+                >
+                  <div class="img-circle">
+                    <img
+                      class="img-fluid"
+                      src="./images/team1.jpg"
+                      class="d-block w-100"
+                      alt="team 1"
+                    />
+                  </div>
+                  <div class="align-self-start">
+                    <i class="fa-solid fa-quote-left"></i>
+                  </div>
+                  <div class="carousel__message">
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Rerum veritatis sapiente corrupti optio nostrum debitis
+                      aliquam quos, distinctio numquam fuga voluptates vero ad
+                      eligendi? Odio molestias eligendi similique in dicta.
+                    </p>
+                    <h4 class="sub-title">Benjamin Lucas</h4>
+                    <p class="sub-text">Company name</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- JS -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
@@ -676,6 +881,7 @@
         delay: 10,
       });
     </script>
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
