--- a/task-9-Masterwork/index.html
+++ b/task-9-Masterwork/index.html
@@ -859,6 +859,21 @@
         </div>
       </div>
     </section>
+
+    <section class="action container-fluid py-4">
+      <div class="col-lg-6 mx-auto text-center mb-3">
+        <h3>Ready to build your own brand community?</h3>
+        <p>
+          Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
+          posuere cubilia Curae; Nulla mollis dapibus nunc, ut rhoncus turpis
+          sodales quis. Integer sit amet mattis quam.
+        </p>
+        <div class="mt-3 d-flex justify-content-center">
+          <a class="primary-btn mx-3" href="#">Book A Demo</a>
+          <a class="secondary-btn mx-3" href="#">Get Started</a>
+        </div>
+      </div>
+    </section>
     <!-- JS -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
