--- a/task-9-Masterwork/index.html
+++ b/task-9-Masterwork/index.html
@@ -724,9 +724,9 @@
                   <div class="img-circle">
                     <img
                       class="img-fluid"
-                      src="./images/team1.jpg"
+                      src="./images/team2.jpg"
                       class="d-block w-100"
-                      alt="team 1"
+                      alt="team 2"
                     />
                   </div>
                   <div class="align-self-start">
@@ -739,7 +739,7 @@
                       aliquam quos, distinctio numquam fuga voluptates vero ad
                       eligendi? Odio molestias eligendi similique in dicta.
                     </p>
-                    <h4 class="sub-title">Benjamin Lucas</h4>
+                    <h4 class="sub-title">Oliver Bradley</h4>
                     <p class="sub-text">Company name</p>
                   </div>
                 </div>
@@ -753,9 +753,9 @@
                   <div class="img-circle">
                     <img
                       class="img-fluid"
-                      src="./images/team1.jpg"
+                      src="./images/team3.jpg"
                       class="d-block w-100"
-                      alt="team 1"
+                      alt="team 3"
                     />
                   </div>
                   <div class="align-self-start">
@@ -768,7 +768,7 @@
                       aliquam quos, distinctio numquam fuga voluptates vero ad
                       eligendi? Odio molestias eligendi similique in dicta.
                     </p>
-                    <h4 class="sub-title">Benjamin Lucas</h4>
+                    <h4 class="sub-title">Wiliam James</h4>
                     <p class="sub-text">Company name</p>
                   </div>
                 </div>
@@ -779,9 +779,9 @@
                   <div class="img-circle">
                     <img
                       class="img-fluid"
-                      src="./images/team1.jpg"
+                      src="./images/team4.jpg"
                       class="d-block w-100"
-                      alt="team 1"
+                      alt="team 4"
                     />
                   </div>
                   <div class="align-self-start">
@@ -794,7 +794,7 @@
                       aliquam quos, distinctio numquam fuga voluptates vero ad
                       eligendi? Odio molestias eligendi similique in dicta.
                     </p>
-                    <h4 class="sub-title">Benjamin Lucas</h4>
+                    <h4 class="sub-title">Erik Knauer</h4>
                     <p class="sub-text">Company name</p>
                   </div>
                 </div>
@@ -808,9 +808,9 @@
                   <div class="img-circle">
                     <img
                       class="img-fluid"
-                      src="./images/team1.jpg"
+                      src="./images/team5.jpg"
                       class="d-block w-100"
-                      alt="team 1"
+                      alt="team 5"
                     />
                   </div>
                   <div class="align-self-start">
@@ -823,7 +823,7 @@
                       aliquam quos, distinctio numquam fuga voluptates vero ad
                       eligendi? Odio molestias eligendi similique in dicta.
                     </p>
-                    <h4 class="sub-title">Benjamin Lucas</h4>
+                    <h4 class="sub-title">Christian Bale</h4>
                     <p class="sub-text">Company name</p>
                   </div>
                 </div>
@@ -834,9 +834,9 @@
                   <div class="img-circle">
                     <img
                       class="img-fluid"
-                      src="./images/team1.jpg"
+                      src="./images/team6.jpg"
                       class="d-block w-100"
-                      alt="team 1"
+                      alt="team 6"
                     />
                   </div>
                   <div class="align-self-start">
@@ -849,7 +849,7 @@
                       aliquam quos, distinctio numquam fuga voluptates vero ad
                       eligendi? Odio molestias eligendi similique in dicta.
                     </p>
-                    <h4 class="sub-title">Benjamin Lucas</h4>
+                    <h4 class="sub-title">Isabella Mia</h4>
                     <p class="sub-text">Company name</p>
                   </div>
                 </div>
@@ -860,6 +860,7 @@
       </div>
     </section>
 
+    <!-- Action -->
     <section class="action container-fluid py-4">
       <div class="col-lg-6 mx-auto text-center mb-3">
         <h3>Ready to build your own brand community?</h3>
@@ -874,6 +875,104 @@
         </div>
       </div>
     </section>
+
+    <footer class="footer container-fluidpy-4 py-4">
+      <div class="row footer__link px-4 mb-2">
+        <div class="col-lg-2">
+          <h5>Company</h5>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Contact Us</a></li>
+          </ul>
+        </div>
+        <div class="col-lg-2">
+          <h5>Useful Links</h5>
+          <ul>
+            <li><a href="#">Case Study</a></li>
+            <li><a href="#">Our Branches</a></li>
+            <li><a href="#">Latest Media</a></li>
+            <li><a href="#">About Company</a></li>
+            <li><a href="#">Our People</a></li>
+          </ul>
+        </div>
+        <div class="col-lg-2">
+          <h5>Our Services</h5>
+          <ul>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Our Terms</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Landing Page</a></li>
+            <li><a href="#">Our People</a></li>
+          </ul>
+        </div>
+        <div class="col-lg-1"></div>
+        <div class="col-lg-5">
+          <h5>Newsletter</h5>
+          <div class="footer__form">
+            <h4>Get latest updates and offers.</h4>
+            <form action="#" class="subscribe" method="post">
+              <input
+                type="email"
+                name="email"
+                placeholder="Email Address"
+                required=""
+              />
+              <a class="secondary-btn" type="submit">Go</a>
+            </form>
+            <p>
+              Sign up for our latest news &amp; articles. We won't give you spam
+              mails.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="footer__copyright container-fluid px-4 pt-2">
+        <div class="row">
+          <div class="col-lg-6">
+            <p>
+              &copy; 2022 Masterwork. All rights reserved | Designed by
+              <a href="https://w3layouts.com/">W3Layouts</a>
+            </p>
+          </div>
+          <div class="mt-lg-0 mt-3 col-lg-6">
+            <ul class="social d-flex justify-content-end">
+              <li>
+                <a href="#facebook"
+                  ><span
+                    class="fa fa-facebook"
+                    style="font-size: 2rem"
+                    aria-hidden="true"
+                  ></span
+                ></a>
+              </li>
+              <li>
+                <a href="#linkedin"
+                  ><span class="fa fa-linkedin" aria-hidden="true"></span
+                ></a>
+              </li>
+              <li>
+                <a href="#twitter"
+                  ><span class="fa fa-twitter" aria-hidden="true"></span
+                ></a>
+              </li>
+              <li>
+                <a href="#google"
+                  ><span class="fa fa-google-plus" aria-hidden="true"></span
+                ></a>
+              </li>
+              <li>
+                <a href="#github"
+                  ><span class="fa fa-github" aria-hidden="true"></span
+                ></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
     <!-- JS -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
