fontsize for small device

--- a/task-9-Masterwork/index.html
+++ b/task-9-Masterwork/index.html
@@ -946,7 +946,7 @@
           </div>
           <div class="mt-lg-0 mt-3 col-lg-6">
             <ul
-              class="social d-flex justify-content-lg-end justify-content-sm-between"
+              class="social d-flex justify-content-lg-end justify-content-center justify-content-sm-between"
             >
               <li>
                 <a href="#facebook"><i class="fa-brands fa-facebook"></i></a>
