--- a/task-9-Masterwork/index.html
+++ b/task-9-Masterwork/index.html
@@ -944,9 +944,10 @@
               <a href="https://w3layouts.com/">W3Layouts</a>
             </p>
           </div>
-          <div class="mt-lg-0 mt-3 col-lg-6">
+          <div class="mt-lg-0 mt-3 col-lg-6 justify-content-center">
             <ul
               class="social d-flex justify-content-lg-end justify-content-center justify-content-sm-between"
+              style="padding-left: 0;"
             >
               <li>
                 <a href="#facebook"><i class="fa-brands fa-facebook"></i></a>
