--- a/task-9-Masterwork/index.html
+++ b/task-9-Masterwork/index.html
@@ -884,8 +884,8 @@
     </section>
 
     <footer class="footer container-fluid py-4 py-4">
-      <div class="row footer__link px-4 mb-2 px-sm-2">
-        <div class="col-lg-2">
+      <div class="row footer__link px-lg-4 mb-2 px-sm-2">
+        <div class="col-lg-2 text-center text-md-start">
           <h5>Company</h5>
           <ul>
             <li><a href="#">Home</a></li>
@@ -895,7 +895,7 @@
             <li><a href="#">Contact Us</a></li>
           </ul>
         </div>
-        <div class="col-lg-2">
+        <div class="col-lg-2 text-center text-md-start">
           <h5>Useful Links</h5>
           <ul>
             <li><a href="#">Case Study</a></li>
@@ -905,7 +905,7 @@
             <li><a href="#">Our People</a></li>
           </ul>
         </div>
-        <div class="col-lg-2">
+        <div class="col-lg-2 text-center text-md-start">
           <h5>Our Services</h5>
           <ul>
             <li><a href="#">Privacy Policy</a></li>
